--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <div id="root"></div>
-    <script type="text/javascript" src="/environment.js"></script>
+    <script type="text/javascript">
+        fetch('/environment.json').then((response) => response.json()).then((env) => { window.env = env; });
+    </script>
 </body>
 
 </html>
