--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
 
 <body>
     <div id="root"></div>
-    <script type="text/javascript">
-        fetch('/environment.json').then((response) => response.json()).then((env) => { window.env = env; });
-    </script>
+    <script type="text/javascript" src="/environment.js"></script>
 </body>
 
 </html>
